Major refactor for internal APIs